build/log/idf_py_stderr_output_58971
/home/zeng/share/gateway/LowConfGateway/main/spi.c: In function 'SpiRecvTask':
/home/zeng/share/gateway/LowConfGateway/main/spi.c:181:70: error: expected ')' before ';' token
  181 |                         printf("%02x ", ((char *)t.rx_buffer)[jindex];//recvbuf);
      |                               ~                                      ^
      |                                                                      )
/home/zeng/share/gateway/LowConfGateway/main/spi.c:181:71: error: expected ';' before '}' token
  181 |                         printf("%02x ", ((char *)t.rx_buffer)[jindex];//recvbuf);
      |                                                                       ^
      |                                                                       ;
  182 |                     }
      |                     ~                                                  
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:216：esp-idf/main/CMakeFiles/__idf_main.dir/spi.c.obj] 错误 1
make[2]: *** [CMakeFiles/Makefile2:5751：esp-idf/main/CMakeFiles/__idf_main.dir/all] 错误 2
make[1]: *** [CMakeFiles/Makefile2:2455：CMakeFiles/flash.dir/rule] 错误 2
make: *** [Makefile:312：flash] 错误 2
